--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="Images/logo.png" class="logo">
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></a></li>
                 <li><a href="#About">About</a></a></li>
