images to Images

--- a/biotron.html
+++ b/biotron.html
@@ -11,7 +11,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/actuallogo.png" class="logo">
+            <img src="Images/actuallogo.png" class="logo">
             <ul id="sidemenu">
                 <i class="fas fa-times" onclick="closemenu()"></i>
             </ul>
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/carboncapturedevice.png">
+                <img src="Images/carboncapturedevice.png">
             </div>
             <div class="about-col-2">
                 <p><b>Biotron</b> is a design team at the Univeristy of Waterloo where we make biomechatronic
