images to Images

--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo">
+                <img src="Images/logo.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="index.html#header">Home</a></a></li>
                     <li><a href="index.html#About">About</a></a></li>
@@ -33,7 +33,7 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="images/300x360.png">
+                <img src="Images/300x360.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>Thompson Medical Centre</b></span> was my summer 2023 employment. As a clinical 
@@ -72,7 +72,7 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="images/300x360.png">
+                <img src="Images/300x360.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>Farm Boy</b></span> was my part time employment from August 2022 - January 2023. 
@@ -102,7 +102,7 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="images/300x360.png">
+                <img src="Images/300x360.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>Y.O.L.O</b></span> - or Youth Organizing Leadership Opportunities is an organization with the 
