images to Images

--- a/indexwithcontact.html
+++ b/indexwithcontact.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/picforabout.jpg">
+                <img src="Images/picforabout.jpg">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
@@ -76,7 +76,7 @@
         <h1 class="sub-title">Projects</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/carboncapturedevice.png">
+                <img src="Images/carboncapturedevice.png">
                 <div class="layer">
                     <h3>OpenAir</h3>
                     <p>A carbon capture device for the annual OpenAir competition.
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-2.png">
+                <img src="Images/work-2.png">
                 <div class="layer">
                     <h3>Biotron</h3>
                     <p>EMGs, Conductive Fabric, and Arduino all in one biosleeve!
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/owlwithborders.png">
+                <img src="Images/owlwithborders.png">
                 <div class="layer">
                     <h3>SolidWorks Owl</h3>
                     <p>Meet Kharl the 3D printed, SolidWorks-designed, Great Horned Owl! His 9 unique parts 
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/helifront.png">
+                <img src="Images/helifront.png">
                 <div class="layer">
                     <h3>SolidWorks Helicopter</h3>
                     <p>A 9-part SolidWorks assembly with a section view, BOM, and exploded diagram.
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/stepngo.png">
+                <img src="Images/stepngo.png">
                 <div class="layer">
                     <h3>Step N' Go</h3>
                     <p>An accessible hands-free door opener for individuals with carpal tunnel syndrome.
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="work">  
-                <img src="images/ultrasound.png">
+                <img src="Images/ultrasound.png">
                 <div class="layer">
                     <h3>Ultrasound Data Software</h3>
                     <p>An object-oriented program that takes in ultrasound data and outputs a csv file.
