images to Images

--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo">
+                <img src="Images/logo.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="index.html#header">Home</a></a></li>
                     <li><a href="index.html#About">About</a></a></li>
@@ -33,7 +33,7 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="images/carboncapturedevice.png">
+                <img src="Images/carboncapturedevice.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>OpenAir</b></span> is an annual carbon capture device competition. Since September 2023, I have been a part of 
@@ -81,7 +81,7 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="images/300x360.png">
+                <img src="Images/300x360.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>Biotron</b></span> is a design team at the Univeristy of Waterloo where we make biomechatronic
@@ -119,8 +119,8 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="images/assembledowl.png">
-                <img src="images/owlmechanism.png">
+                <img src="Images/assembledowl.png">
+                <img src="Images/owlmechanism.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>Kharl</b></span> is a 3D-printed great horned owl. Featuring 16 parts (10 unique), Kharl allowed
@@ -161,9 +161,9 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="images/heliside.png">
-                <img src="images/heliexplodeandbom.png">
-                <img src="images/helisectionview.png">
+                <img src="Images/heliside.png">
+                <img src="Images/heliexplodeandbom.png">
+                <img src="Images/helisectionview.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>SolidWing</b></span> is a helicopter I made to practice assembly, exploded diagrams, bill of materials, 
@@ -193,8 +193,8 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="images/stepngo.png">
-                <img src="images/infographic.png">
+                <img src="Images/stepngo.png">
+                <img src="Images/infographic.png">
 
             </div>
             <div class="about-col-2">
@@ -243,7 +243,7 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="images/ultrasounddata.png">
+                <img src="Images/ultrasounddata.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>aMode</b></span> is a program I coded in C++ that takes in ultrasound data, preforms the appropriate
