--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <ul>
                         <li><span>Coding</span><br>Object-Oriented Programming and Website Development</li>
                         <li><span>Modeling</span><br>3D Modeling Using SolidWorks and 3D Printing</li>
-                        <li><span>Design</span><br>Product Developement and Life-Cycle Analysis</li>
+                        <li><span>Design</span><br>Product Development and Life-Cycle Analysis</li>
                         <li><span>Interpersonal</span><br>Strong Presentation, Collaboration, Communication and Leadership Skills</li>
                     </ul>
                 </div>  
