Changed the wording of a few project descriptions

--- a/project.html
+++ b/project.html
@@ -87,7 +87,7 @@
                 <p><span><b>Biotron</b></span> is a design team at the Univeristy of Waterloo where we make biomechatronic
                     devices to aid specific individuals or to advance the accessibility of biomedical devices.
                     I am a part of the EMG Fabric subteam, where we are creating a heart-monitoring and gesture 
-                    recognition sleeve.
+                    recognition bio-sleeve.
                 </p>
 
                 <h4>Contributions</h4>
@@ -163,7 +163,6 @@
             <div class="about-col-1">
                 <img src="Images/heliside.png">
                 <img src="Images/heliexplodeandbom.png">
-                <img src="Images/helisectionview.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>SolidWing</b></span> is a helicopter I made to practice assembly, exploded diagrams, bill of materials, 
@@ -211,7 +210,7 @@
                     <li>Determined primary and secondary functions</li>
                     <li>Created multiple potential design concepts</li>
                     <li>Planned, constructed, and tested low-fidelity prototype</li>
-                    <li>Performed an engineering analysis used static physics (torque, moments, etc)</li>
+                    <li>Performed an engineering analysis using static physics (torque, moments, etc)</li>
                     <li>Formally presented the project to the class and teaching team</li>
                 </ul>
 
@@ -246,8 +245,8 @@
                 <img src="Images/ultrasounddata.png">
             </div>
             <div class="about-col-2">
-                <p><span><b>aMode</b></span> is a program I coded in C++ that takes in ultrasound data, preforms the appropriate
-                    calculations, and returns a csv file of the manipulated data. The csv feel is then sent to 
+                <p><span><b>aMode</b></span> is a program I coded in C++ that takes in ultrasound data, performs the appropriate
+                    calculations, and returns a csv file of the manipulated data. The csv file is then sent to 
                     Microsoft Excel, where the data can be plotted.
                 </p>
 
