--- a/experience.html
+++ b/experience.html
@@ -39,7 +39,7 @@
                 <p><span><b>Thompson Medical Centre</b></span> was my summer 2023 employment. As a clinical 
                     assistant, I was in charge of bringing in patients and performing intake history in Accuro. 
                     I also prepared dermatology surgery trays, which included drawing up syringes of local anaesthetic 
-                    and sterilizing tools with an autoclave. I also had the opportunity to research and create patient information
+                    and sterilizing tools with an autoclave. I had the opportunity to research and create patient information
                     sheets about skin cancer and sun safety using Google Docs. Lastly, I performed medical clerical
                     work, such as handling incoming and outgoing mail.
                 </p>
@@ -108,7 +108,8 @@
                 <p><span><b>Y.O.L.O</b></span> - or Youth Organizing Leadership Opportunities is an organization with the 
                     goal of providing youth with opportunities that are organized by youth. Volunteering with Y.O.L.O. allowed
                     me to contribute to the community during the pandemic by developing, planning, running, hosting and participating
-                    in a variety of different events, including Murder Mysteries, Trivia Nights, and Coffee Houses.  
+                    in a variety of different events, including Murder Mysteries, Trivia Nights, and Coffee Houses. On the left is a picture of me
+                    performing on the piano at one of our monthly coffee houses.
                 </p>
 
                 <h4>Skills Used</h4>
