TMC picture addition

--- a/experience.html
+++ b/experience.html
@@ -33,7 +33,8 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Images/300x360.png">
+                <img src="Images/examroom.png">
+                <img src="Images/biopsytray.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>Thompson Medical Centre</b></span> was my summer 2023 employment. As a clinical 
