Farm Boy picture addition

--- a/experience.html
+++ b/experience.html
@@ -33,8 +33,8 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Images/examroom.png">
-                <img src="Images/biopsytray.png">
+                <img src="Images/examroom.jpg">
+                <img src="Images/biopsytray.jpg">
             </div>
             <div class="about-col-2">
                 <p><span><b>Thompson Medical Centre</b></span> was my summer 2023 employment. As a clinical 
@@ -73,7 +73,7 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Images/300x360.png">
+                <img src="Images/farmboy.jpg">
             </div>
             <div class="about-col-2">
                 <p><span><b>Farm Boy</b></span> was my part time employment from August 2022 - January 2023. 
