Update Farm Boy experience

--- a/experience.html
+++ b/experience.html
@@ -85,7 +85,7 @@
                 <h4>Skills Used</h4>
                 <ul>
                     <li>Lifting, carrying, and pushing objects over 50lbs</li>
-                    <li>Making anaesthetically pleasing displays</li>
+                    <li>Making aesthetically pleasing displays</li>
                     <li>Helping customers</li>
                     <li>Incident recording</li>
                 </ul>
