temporary black image

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="Images/300x360.png">
+                <img src="Images/black.png">
                 <div class="layer">
                     <h3>Biotron</h3>
                     <p>EMGs, Conductive Fabric, and Arduino all in one biosleeve!
