--- a/experience.html
+++ b/experience.html
@@ -103,14 +103,12 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Images/300x360.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>Y.O.L.O</b></span> - or Youth Organizing Leadership Opportunities is an organization with the 
                     goal of providing youth with opportunities that are organized by youth. Volunteering with Y.O.L.O. allowed
                     me to contribute to the community during the pandemic by developing, planning, running, hosting and participating
-                    in a variety of different events, including Murder Mysteries, Trivia Nights, and Coffee Houses. On the left is a picture of me
-                    performing on the piano at one of our monthly coffee houses.
+                    in a variety of different events, including Murder Mysteries, Trivia Nights, and Coffee Houses. 
                 </p>
 
                 <h4>Skills Used</h4>
