--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="Images/stepngo.png">
+                <img src="Images/stepdrawing2.jpg">
                 <div class="layer">
                     <h3>Step N' Go</h3>
                     <p>An accessible hands-free door opener for individuals with carpal tunnel syndrome.
