--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="work">  
-                <img src="Images/ultra.png">
+                <img src="Images/ultra2.png">
                 <div class="layer">
                     <h3>Ultrasound Data Software</h3>
                     <p>An object-oriented program that takes in ultrasound data and outputs a csv file.
