changed kharl pic to remove background

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="Images/owlwithborders.png">
+                <img src="Images/kharl.png">
                 <div class="layer">
                     <h3>SolidWorks Owl</h3>
                     <p>Meet Kharl the 3D printed, SolidWorks-designed, Great Horned Owl! His 9 unique parts 
