--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></a></li>
                 <li><a href="#About">About</a></a></li>
-                <li><a href="#Experience">Experience</a></a></li>
                 <li><a href="#Projects">Projects</a></a></li>
+                <li><a href="#Experience">Experience</a></a></li>
                 <li><a href="#Contact">Contact</a></a></li>
                 <i class="fas fa-times" onclick="closemenu()"></i>
             </ul>
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="Images/battercase.PNG">
+                <img src="Images/batterycase.PNG">
                 <div class="layer">
                     <h3>Biotron</h3>
                     <p>EMGs, Conductive Fabric, and Arduino all in one biosleeve!
