test if website is updating properly

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     experiences. I will complete my first two academic terms at the University of Waterloo 
                     in April 2024. I am actively pursuing a co-op in the field of biomedical engineering for 
                     May-August 2024. Software development for biomedical applications is a particular interest 
-                    of mine. I am a leader who thrives in a team environment and values strong communication.
+                    of mine. I am a leader who thrives in a team environment and values strong communication. test
                 </p>
 
                 <div class="tab-titles">
