added piano picture

--- a/experience.html
+++ b/experience.html
@@ -103,6 +103,7 @@
         </div>
         <div class="row">
             <div class="about-col-1">
+                <img src="Images/piano.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>Y.O.L.O</b></span> - or Youth Organizing Leadership Opportunities is an organization with the 
