--- a/experience.html
+++ b/experience.html
@@ -109,7 +109,8 @@
                 <p><span><b>Y.O.L.O</b></span> - or Youth Organizing Leadership Opportunities is an organization with the 
                     goal of providing youth with opportunities that are organized by youth. Volunteering with Y.O.L.O. allowed
                     me to contribute to the community during the pandemic by developing, planning, running, hosting and participating
-                    in a variety of different events, including Murder Mysteries, Trivia Nights, and Coffee Houses. 
+                    in a variety of different events, including Murder Mysteries, Trivia Nights, and Coffee Houses. Pictured on the 
+                    left is me performing "See You Again" by Wiz Khalifa and Charlie Puth on the piano.
                 </p>
 
                 <h4>Skills Used</h4>
