More updates to the YOLO text

--- a/experience.html
+++ b/experience.html
@@ -110,7 +110,7 @@
                     goal of providing youth with opportunities that are organized by youth. Volunteering with Y.O.L.O. allowed
                     me to contribute to the community during the pandemic by developing, planning, running, hosting and participating
                     in a variety of different events, including Murder Mysteries, Trivia Nights, and Coffee Houses. Pictured on the 
-                    left is me performing "See You Again" by Wiz Khalifa and Charlie Puth on the piano.
+                    left is me performing "See You Again" by Wiz Khalifa and Charlie Puth on the piano at one of the monthly Coffee Houses.
                 </p>
 
                 <h4>Skills Used</h4>
