--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="Images/batterycase.png">
+                <img src="Images/biotroncase.png">
                 <div class="layer">
                     <h3>Biotron</h3>
                     <p>EMGs, Conductive Fabric, and Arduino all in one biosleeve!
