updating biotron pic

--- a/project.html
+++ b/project.html
@@ -233,7 +233,7 @@
         </div>
         <div class="row">
             <div class="about-col-1">
-                <img src="Images/batterycase.png">
+                <img src="Images/biotroncase.png">
             </div>
             <div class="about-col-2">
                 <p><span><b>Biotron</b></span> is a design team at the Univeristy of Waterloo where we make biomechatronic
