updating TMC applications used

--- a/experience.html
+++ b/experience.html
@@ -41,7 +41,7 @@
                     assistant, I was in charge of bringing in patients and performing intake history in Accuro. 
                     I also prepared dermatology surgery trays, which included drawing up syringes of local anaesthetic 
                     and sterilizing tools with an autoclave. I had the opportunity to research and create patient information
-                    sheets about skin cancer and sun safety using Google Docs. Lastly, I performed medical clerical
+                    sheets about skin cancer and sun safety using Microsoft Office and Google Workspace. Lastly, I performed medical clerical
                     work, such as handling incoming and outgoing mail.
                 </p>
 
