--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
-                <p>I am an enthusiastic and driven student who loves learning new skills and gaining new 
-                    experiences. I will complete my first two academic terms at the University of Waterloo 
-                    in April 2024. I am actively pursuing a co-op in the field of biomedical engineering for 
-                    May-August 2024. Software development for biomedical applications is a particular interest 
-                    of mine. I am a leader who thrives in a team environment and values strong communication.
+                <p style="font-size: large;">I am an enthusiastic and driven 2A biomedical engineering co-op student at the University of Waterloo. With a strong foundation in software, biology, and 3D modeling, I have honed my skills through coursework, school design teams, personal projects, and an immersive co-op placement with atVenu. These experiences have not only sharpened my technical proficiency, but also cultivated my ability to collaborate effectively within multidisciplinary teams. I am enthusiastic about contributing my knowledge and innovative mindset to the biomedical engineering field and am eager to connect with professionals who share my passion for advancing healthcare through technology.
                 </p>
 
                 <div class="tab-titles">
@@ -51,9 +47,9 @@
                 </div>
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                        <li><span>Coding</span><br>Object-Oriented Programming and Website Development</li>
+                        <li><span>Coding</span><br>Object-Oriented Programming and Full-Stack Development</li>
                         <li><span>Modeling</span><br>3D Modeling Using SolidWorks and 3D Printing</li>
-                        <li><span>Design</span><br>Product Development and Life-Cycle Analysis</li>
+                        <li><span>Design</span><br>Rapid Prototyping and Life-Cycle Analysis</li>
                         <li><span>Interpersonal</span><br>Strong Presentation, Collaboration, Communication and Leadership Skills</li>
                     </ul>
                 </div>  
