updating the work experience

--- a/experience.html
+++ b/experience.html
@@ -95,30 +95,33 @@
     </div>
 </div>
 
-<!---------------------YOLO------------------------>
+<!---------------------atVenu------------------------>
 <div id="About">
     <div class="container">
         <div class="header-text">
-            <h1 id="yolo"><span>Y.O.L.O</span> - Volunteer Event Planner </h1>
+            <h1 id="atvenu"><span>atVenu</span> - Software Development Intern </h1>
         </div>
         <div class="row">
             <div class="about-col-1">
                 <img src="Images/piano.png">
             </div>
             <div class="about-col-2">
-                <p><span><b>Y.O.L.O</b></span> - or Youth Organizing Leadership Opportunities is an organization with the 
-                    goal of providing youth with opportunities that are organized by youth. Volunteering with Y.O.L.O. allowed
-                    me to contribute to the community during the pandemic by developing, planning, running, hosting and participating
-                    in a variety of different events, including Murder Mysteries, Trivia Nights, and Coffee Houses. Pictured on the 
-                    left is me performing "See You Again" by Wiz Khalifa and Charlie Puth on the piano at one of the monthly Coffee Houses.
+                <p><span><b>atVenu</b></span> - is an organization in the entertainment industry. I was in charge
+                    of developing a sales reporting software using Ruby on Rails and SQL. I also had the opportunity to
+                    create a Google Apps Script program that automated code generation using from Google Sheet data.
                 </p>
 
                 <h4>Skills Used</h4>
                 <ul>
-                    <li>Planning</li>
-                    <li>Collaborating with a wide range of people on the same project</li>
-                    <li>Google Suite</li>
-                    <li>Public Speaking</li>
+                    <li>Ruby</li>
+                    <li>Javascript</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>SQL</li>
+                    <li>Ruby on Rails</li>
+                    <li>Docker</li>
+                    <li>Github</li>
+
                 </ul>
                 <p>
                     <br><br>
