Update about section

--- a/index.html
+++ b/index.html
@@ -36,14 +36,11 @@
         <div class="container">
             
                 <h1 class="sub-title">About</h1>
-                <p style="font-size: large;">I am an enthusiastic and driven 2A biomedical engineering co-op student at
-                    the University of Waterloo. With a strong foundation in software, biology, and 3D modeling, I have
-                    honed my skills through coursework, school design teams, personal projects, and an immersive co-op
-                    placement with atVenu. These experiences have not only sharpened my technical proficiency, but also
-                    cultivated my ability to collaborate effectively within multidisciplinary teams. I am enthusiastic
-                    about contributing my knowledge and innovative mindset to the biomedical engineering field and am
-                    eager to connect with professionals who share my passion for advancing healthcare through
-                    technology.
+                <p style="font-size: large;">I am in my happy place as a biomedical engineering co-op student at the University of Waterloo. 
+                    With a strong foundation in software, biology, and 3D modeling, I have furthered my skills through coursework, school design teams, 
+                    personal projects, and immersive co-op placements. These experiences have provided ample opportunity to collaborate with multidisciplinary teams. 
+                    I am enthusiastic about contributing my knowledge and innovative mindset to the biomedical engineering field and am keen to connect with professionals 
+                    who share my passion for advancing healthcare through technology.
                 </p>
 
                 <div class="tab-titles">
